--- a/style.css
+++ b/style.css
@@ -2,9 +2,15 @@ body {
     margin: 0;
 }
 
+html {
+    height: 100%;
+}
+
 .side-menu {
     background-color: #a78bfa;
     color: white;
+    grid-row: 1 / 3;
+    padding-right: 30px;
 }
 
 ul {
@@ -66,7 +72,7 @@ img[src*="bell"] {
 }
 
 .header-section {
-    padding: 0px 30px 0px 30px;
+    padding: 0px 30px 20px 30px;
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
@@ -119,4 +125,44 @@ input {
 
 .search-bar {
     align-self: center;
+}
+
+.site-container {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 5fr;
+}
+
+.grid-section {
+    background-color: #e3e3e3;
+}
+
+.cards-container {
+    padding: 20px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.card {
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    display: grid;
+}
+
+.bookmark-options > img {
+    width: 1.3rem;
+    height: auto;
+    margin-left: 5px;
+}
+
+.bookmark-options > img:hover {
+    cursor: pointer;
+}
+
+.bookmark-options {
+    align-self: flex-end;
+    justify-self: end;
 }
