--- a/style.css
+++ b/style.css
@@ -138,15 +138,16 @@ input {
     padding: 20px;
     display: grid;
     gap: 20px;
-    grid-template-columns: 1fr 275px;
+    grid-template-columns: 1fr 300px;
+    grid-template-rows: 1fr;
 }
 
 .projects-container {
     display: grid;
     gap: 20px;
     grid-column: 1 / 2;
-    /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)) 300px;
-    grid-template-rows: repeat(2, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: minmax(250px, 325px);
 }
 
 .card {
@@ -213,16 +214,12 @@ hr {
     border: none;
 }
 
-.side-cards {
-    grid-column: 2 / 3;
-}
-
 .people > div:last-child p {
     margin-bottom: 0;
 }
 
 .side-cards > :nth-child(odd) {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     margin-bottom: 10px;
 }
 
